--- a/CrowdSimulation.vcxproj.filters
+++ b/CrowdSimulation.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="window.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
