graphics overall structure

--- a/CrowdSimulation.vcxproj.filters
+++ b/CrowdSimulation.vcxproj.filters
@@ -27,10 +27,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="window.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="graphics.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
