--- a/CrowdSimulation.vcxproj
+++ b/CrowdSimulation.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="graphics.h" />
     <ClInclude Include="math.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
